@@ -16,12 +16,14 @@ print "\n";
 # ab
 # abs
 # ace
+# acm
 # ady
 # ady-cyrl
 # aeb
 # aeb-arab
 # aeb-latn
 # af
+# agq
 # ak
 # aln
 # als
@@ -30,6 +32,7 @@ print "\n";
 # ami
 # an
 # ang
+# ann
 # anp
 # ar
 # arc
@@ -48,30 +51,39 @@ print "\n";
 # az
 # azb
 # ba
+# bag
 # ban
 # ban-bali
 # bar
+# bas
 # bat-smg
+# bax
 # bbc
 # bbc-latn
+# bbj
 # bcc
 # bci
 # bcl
 # be
 # be-tarask
 # be-x-old
+# bfd
 # bg
 # bgn
 # bh
 # bho
 # bi
 # bjn
+# bkc
+# bkh
+# bkm
 # blk
 # bm
 # bn
 # bo
 # bpy
 # bqi
+# bqz
 # br
 # brh
 # bs
@@ -79,7 +91,9 @@ print "\n";
 # bto
 # bug
 # bxr
+# byv
 # ca
+# cak
 # cbk-zam
 # cdo
 # ce
@@ -89,6 +103,7 @@ print "\n";
 # chr
 # chy
 # ckb
+# cnh
 # co
 # cps
 # cr
@@ -106,11 +121,13 @@ print "\n";
 # de-at
 # de-ch
 # de-formal
+# dga
 # din
 # diq
 # dsb
 # dtp
 # dty
+# dua
 # dv
 # dz
 # ee
@@ -120,12 +137,17 @@ print "\n";
 # en
 # en-ca
 # en-gb
+# en-us
+# en-x-piglatin
 # eo
 # es
 # es-419
 # es-formal
 # et
+# eto
+# etu
 # eu
+# ewo
 # ext
 # fa
 # fat
@@ -134,6 +156,8 @@ print "\n";
 # fit
 # fiu-vro
 # fj
+# fkv
+# fmp
 # fo
 # fon
 # fr
@@ -167,6 +191,7 @@ print "\n";
 # gur
 # guw
 # gv
+# gya
 # ha
 # hak
 # haw
@@ -175,6 +200,7 @@ print "\n";
 # hif
 # hif-latn
 # hil
+# hno
 # ho
 # hr
 # hrx
@@ -190,6 +216,7 @@ print "\n";
 # id
 # ie
 # ig
+# igl
 # ii
 # ik
 # ike-cans
@@ -198,6 +225,7 @@ print "\n";
 # inh
 # io
 # is
+# isu
 # it
 # iu
 # ja
@@ -213,11 +241,13 @@ print "\n";
 # kbp
 # kcg
 # kea
+# ker
 # kg
 # khw
 # ki
 # kiu
 # kj
+# kjh
 # kjp
 # kk
 # kk-arab
@@ -240,12 +270,14 @@ print "\n";
 # ks
 # ks-arab
 # ks-deva
+# ksf
 # ksh
 # ksw
 # ku
 # ku-arab
 # ku-latn
 # kum
+# kus
 # kv
 # kw
 # ky
@@ -253,6 +285,7 @@ print "\n";
 # lad
 # lb
 # lbe
+# lem
 # lez
 # lfn
 # lg
@@ -263,6 +296,7 @@ print "\n";
 # lld
 # lmo
 # ln
+# lns
 # lo
 # loz
 # lrc
@@ -277,6 +311,8 @@ print "\n";
 # mag
 # mai
 # map-bms
+# mcn
+# mcp
 # mdf
 # mg
 # mh
@@ -297,6 +333,7 @@ print "\n";
 # ms
 # ms-arab
 # mt
+# mua
 # mul
 # mus
 # mwl
@@ -306,6 +343,7 @@ print "\n";
 # na
 # nah
 # nan
+# nan-hani
 # nap
 # nb
 # nds
@@ -313,14 +351,20 @@ print "\n";
 # ne
 # new
 # ng
+# nge
 # nia
 # niu
 # nl
 # nl-informal
+# nla
+# nmg
 # nmz
 # nn
+# nnh
+# nnz
 # no
 # nod
+# nog
 # nov
 # nqo
 # nrm
@@ -335,10 +379,13 @@ print "\n";
 # om
 # or
 # os
+# osa-latn
+# ota
 # pa
 # pag
 # pam
 # pap
+# pap-aw
 # pcd
 # pcm
 # pdc
@@ -356,11 +403,14 @@ print "\n";
 # pt-br
 # pwn
 # qu
+# quc
 # qug
 # rgn
 # rif
+# rki
 # rm
 # rmc
+# rmf
 # rmy
 # rn
 # ro
@@ -374,6 +424,7 @@ print "\n";
 # ruq-cyrl
 # ruq-latn
 # rw
+# rwr
 # ryu
 # sa
 # sah
@@ -393,6 +444,8 @@ print "\n";
 # sg
 # sgs
 # sh
+# sh-cyrl
+# sh-latn
 # shi
 # shi-latn
 # shi-tfng
@@ -403,6 +456,7 @@ print "\n";
 # simple
 # sjd
 # sje
+# sju
 # sk
 # skr
 # skr-arab
@@ -410,6 +464,7 @@ print "\n";
 # sli
 # sm
 # sma
+# smj
 # smn
 # sms
 # sn
@@ -420,6 +475,7 @@ print "\n";
 # sr-el
 # srn
 # sro
+# srq
 # ss
 # st
 # stq
@@ -447,6 +503,7 @@ print "\n";
 # tly-cyrl
 # tn
 # to
+# tok
 # tpi
 # tr
 # tru
@@ -456,6 +513,7 @@ print "\n";
 # tt-cyrl
 # tt-latn
 # tum
+# tvu
 # tw
 # ty
 # tyv
@@ -480,15 +538,23 @@ print "\n";
 # vo
 # vot
 # vro
+# vut
 # wa
+# wal
 # war
+# wes
 # wls
 # wo
 # wuu
+# wya
 # xal
 # xh
 # xmf
 # xsy
+# yas
+# yat
+# yav
+# ybb
 # yi
 # yo
 # yrl
